Added comments and a review of todays challenge.

--- a/day3-fruitpopPage/index.html
+++ b/day3-fruitpopPage/index.html
@@ -21,6 +21,7 @@
       </ul>
 
       <div class="shoppingBag">
+        <!-- This needs to change to a font awesome icon so it can be edited. -->
         <a href="#"
           ><img
             src="images/shopping-bag-icon.png"
