This is my review on the process of designing the challenge for day 8. As well as, my comments on what needs improving and adjusting.

--- a/day8-gamingDashboard/index.html
+++ b/day8-gamingDashboard/index.html
@@ -36,6 +36,7 @@
 
         <section class="hero-container">
           <div class="searchBar">
+            <!-- make the search bar useable -->
             <input type="text" name="q" placeholder="Search..." />
           </div>
           <div class="heroTitle">
