This is my review and comments on day 10 of the challenge regarding my experience with this project, along with title changes to in previous reviews to adjust the date to reflect the challenge day accurately.

--- a/day10-productPage/index.html
+++ b/day10-productPage/index.html
@@ -36,9 +36,11 @@
     <section class="product-info-page flex">
       <div class="product-info">
         <div class="nutrition-facts">
+          <!-- Find a better alternate to present this information in -->
           <table>
             <thead class="table-title">
               <h3>NUTRITION FACTS</h3>
+              <!-- to put spacing below -->
             </thead>
             <tbody>
               <tr>
@@ -75,12 +77,14 @@
 
               <tr>
                 <span class="indent">
+                  <!-- adjust span to inside the td -->
                   <td>Total Sugars 65g</td>
                   <td></td>
                 </span>
               </tr>
               <tr>
                 <span class="indent">
+                  <!-- adjust span to inside the td -->
                   <td>Includes 65g added sugars</td>
                   <td><h5>130%</h5></td>
                 </span>
@@ -90,6 +94,7 @@
               </tr>
             </tbody>
             <tfoot>
+              <!-- Ceck for spelling and spacing errors and edit font-size. Why is the footer appearing at the top of the table?-->
               * Not a significant source of saturated fat, trasn fat, cholesterol,
               dietry fibre, vitamin D,calcium, iron and potassium.
             </tfoot>
@@ -98,6 +103,7 @@
         <div class="ingredients">
           <h4>Ingredients</h4>
           <p>
+            <!-- Ceck for spelling and spacing errors -->
             CARBONATED WATER, HIGH FRUCTOSE CORN SYRUP, CARAMEL COLOR,PHOSPORIC
             ACID, NATURAL FLAVORS, CAFFINE
           </p>
