This is my review and commentary of my experience with day 11.

--- a/day11-formPage/index.html
+++ b/day11-formPage/index.html
@@ -28,6 +28,9 @@
     </nav>
     <form action="" method="post" class="container">
       <h3 class="form-heading">Work with us today...</h3>
+
+      <!-- wrap each question and answer in an input-section and then divide them into inout-groups. apply flex-direction:row to place label and input on the same line.-->
+
       <section class="personal-info flex-column">
         <label for="fname">First Name:</label>
         <input
@@ -118,7 +121,14 @@
         />
       </section>
 
-      <button type="submit" class="submit-btn">Submit</button>
+      <!-- add the choice of service with base prices of interest -->
+
+      <!-- add a text box for any addtional info or questions -->
+
+      <button type="submit" class="submit-btn">
+        Submit
+        <!-- change this to an apply now button -->
+      </button>
     </form>
 
     <section class="information-container">
