This is my initial commit for day 13 of this challenge.

--- a/day12-card/index.html
+++ b/day12-card/index.html
@@ -16,6 +16,7 @@
       </ul>
     </nav>
     <main class="container">
+      <!-- some cards can be clickable -->
       <div class="card">
         <h3>Card Title</h3>
         <p>
