--- a/day13-travelDashboard/index.html
+++ b/day13-travelDashboard/index.html
@@ -89,6 +89,8 @@
               </select>
             </div>
           </div>
+
+          <!-- Finish Form -->
         </form>
       </section>
     </main>
