This is my commentary and review on my progress for day 14.

--- a/day14-recipePage/index.html
+++ b/day14-recipePage/index.html
@@ -1,3 +1,5 @@
+<!-- Recipe taken from: https://www.bakedbyrachel.com/super-soft-chocolate-chip-cookies/ -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -20,12 +22,18 @@
     </nav>
 
     <section class="recipe container flex-row">
+      <!-- border class to be added on recipe section -->
       <div class="recipe-image">
+        <!-- look into adding the image as a background-image instead -->
         <img src="images/cookies.jpg" alt="cookies" class="recipe-img" />
       </div>
       <div class="recipe-information container">
+        <!-- Recipe Name to go here -->
         <div class="ingredients">
           <h3>Ingredients:</h3>
+          <!-- This could be done with an unordered list or a checkbox input so users can tick off gathered ingredients -->
+
+          <!-- improvement in reading of ingredients can also be done with a table -->
           <p>1/2 C Unsalted Butter <span class="side-note">softened</span></p>
           <p>1/2 C Granulated Sugar</p>
           <p>1/2 C Light Brown Sugar</p>
@@ -40,6 +48,7 @@
         <div class="method">
           <h3>Method:</h3>
           <ol class="method-list">
+            <!-- Get the numbers to align with the rest of the text  -->
             <li>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit.
               Temporibus nesciunt neque harum molestiae saepe, nisi animi
